--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack-config.js --watch --progress --bail -d",
+    "dev": "webpack-dev-server --config webpack-config.js --watch --progress -d",
     "build": "echo \"it works!\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,11 +13,13 @@
     "bootstrap": "^3.3.6",
     "bottlejs": "^1.3.0",
     "classnames": "^2.2.5",
+    "eventemitter2": "^1.0.3",
     "hellojs": "^1.13.1",
     "immutable": "^3.8.1",
     "intl": "^1.2.1",
     "isomorphic-fetch": "^2.2.1",
     "jwt-decode": "^2.0.1",
+    "node-uuid": "^1.4.7",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
