--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "socket.io": "^1.4.6",
     "store": "^1.3.20"
   },
   "devDependencies": {
