--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-bootstrap": "^0.23.0",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "socket.io": "^1.4.6",
     "store": "^1.3.20"
