--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
+    "react-hot-loader": "^1.3.0",
     "react-intl": "^2.1.2",
     "react-loader": "^2.4.0",
     "react-redux": "^4.4.5",
