--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack-config.js --watch --progress -d",
-    "build": "echo \"it works!\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development webpack-dev-server --config webpack-config.js --watch --progress -d",
+    "build": "NODE_ENV=production DFWF_DEV=0 webpack --config webpack-config.js --progress"
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +30,6 @@
     "react-router-bootstrap": "^0.23.0",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "socket.io": "^1.4.6",
     "store": "^1.3.20"
