--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "^3.3.6",
     "bottlejs": "^1.3.0",
     "classnames": "^2.2.5",
     "eventemitter2": "^1.0.3",
@@ -48,10 +48,9 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
+    "node-sass": "^3.7.0",
     "postcss-loader": "^0.9.1",
-    "postcss-mixins": "^4.0.1",
-    "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^2.0.0",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
