--- a/package.json
+++ b/package.json
@@ -39,10 +39,14 @@
     "babel": "^6.5.2",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "bundle-loader": "^0.5.4",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -52,6 +56,7 @@
     "postcss-loader": "^0.9.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "svg-sprite-loader": "0.0.22",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
