--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-polyfill": "^6.9.1",
     "bootstrap-sass": "^3.3.6",
     "bottlejs": "^1.3.0",
+    "classlist.js": "^1.1.20150312",
     "classnames": "^2.2.5",
     "eventemitter2": "^1.0.3",
     "hellojs": "^1.13.1",
