--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-uuid": "^1.4.7",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0",
+    "react-addons-perf": "^15.1.0",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
@@ -39,7 +40,8 @@
     "redux-thunk": "^2.1.0",
     "socket.io": "^1.4.6",
     "store": "^1.3.20",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "why-did-you-update": "0.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
