--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ DFWF_DIGITAL_OCEAN_IMAGE="ubuntu-14-04-x64"
 DFWF_DIGITAL_OCEAN_REGION=nyc2
 DFWF_DIGITAL_OCEAN_RAM=512mb
 DFWF_DIGITAL_OCEAN_TOKEN=mytoken
-DFWF_FACEBOOK_APP_ID=612126742296330
-DFWF_GOOGLE_APP_ID="781572413564-qdm5ffdfv82s5j04c4apvq9dfsh9gimk.apps.googleusercontent.com"
+DFWF_FACEBOOK_APP_ID=myid
+DFWF_GOOGLE_APP_ID=myid
