Description; analytics; deploy

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ DFWF_DIGITAL_OCEAN_RAM=512mb
 DFWF_DIGITAL_OCEAN_TOKEN=mytoken
 DFWF_FACEBOOK_APP_ID=myid
 DFWF_GOOGLE_APP_ID=myid
+DFWF_GOOGLE_ANALYTICS_ID=myid
