--- a/package.json
+++ b/package.json
@@ -10,19 +10,36 @@
   "license": "ISC",
   "dependencies": {
     "animate.css": "^3.5.1",
-    "babel-core": "^6.9.1",
-    "babel-polyfill": "^6.9.1",
+    "autoprefixer": "^6.3.6",
+    "babel": "^6.5.2",
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
+    "babel-polyfill": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "bootstrap-sass": "^3.3.6",
     "bottlejs": "^1.3.0",
+    "bundle-loader": "^0.5.4",
     "classlist.js": "^1.1.20150312",
     "classnames": "^2.2.5",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
+    "dotenv": "^2.0.0",
     "eventemitter2": "^1.0.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "hellojs": "^1.13.1",
+    "html-webpack-plugin": "^2.17.0",
     "immutable": "^3.8.1",
     "intl": "^1.2.4",
     "isomorphic-fetch": "^2.2.1",
     "jwt-decode": "^2.0.1",
+    "node-sass": "^3.7.0",
     "node-uuid": "^1.4.7",
+    "postcss-loader": "^0.9.1",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0",
     "react-addons-perf": "^15.1.0",
@@ -36,33 +53,15 @@
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "socket.io": "^1.4.6",
-    "store": "^1.3.20",
-    "why-did-you-update": "0.0.8",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.17.0",
-    "node-sass": "^3.7.0",
-    "postcss-loader": "^0.9.1",
     "sass-loader": "^3.2.0",
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
+    "store": "^1.3.20",
     "style-loader": "^0.13.1",
     "svg-sprite-loader": "0.0.22",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
-    "autoprefixer": "^6.3.6",
-    "babel": "^6.5.2",
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
-    "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "bundle-loader": "^0.5.4",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.23.1",
-    "dotenv": "^2.0.0"
+    "why-did-you-update": "0.0.8"
   },
   "devDependencies": {
     "react-hot-loader": "^1.3.0",
